--- a/src/component/Home/Home.module.css
+++ b/src/component/Home/Home.module.css
@@ -6,7 +6,7 @@
   font-size: 2rem;
   text-align: center;
   padding: 2rem;
-  background-color: #13c311;
+  background-color: #05b9ce;
   color: #fff;
   box-shadow: 2px 10px 37px -19px rgba(0, 0, 0, 0.75);
 }
