--- a/src/component/About/About.module.css
+++ b/src/component/About/About.module.css
@@ -13,7 +13,7 @@
 .list {
   margin: 1rem 0;
   padding: 1rem;
-  background-color: #c1aef4;
+  background-color: #98c0ec;
   border-radius: 8px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   animation: animate-in 1s ease-out forwards;
@@ -29,7 +29,7 @@
   white-space: pre-wrap;
   font-size: 1.25rem;
   margin: 0.25rem 0 0 0;
-  color: #593884;
+  color: #466d97;
   font-style: italic;
 }
 @keyframes animate-in {
